--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -1,2 +1,8 @@
 <h1>Blog</h1>
+<br>
+{%for post in posts%}
+<a href= {% url 'blog:detail' post.id %}>{{post.title}}</a>
+<a href= {% url 'blog:update' post.id %}>Update</a>
+{%endfor%}
+<br>
 <a href = {% url 'blog:create' %}> Create </a>
