--- a/templates/blog_list.html
+++ b/templates/blog_list.html
@@ -1,9 +1,15 @@
+{% extends 'base.html' %}
+{% block content %}
 <h1>Blog</h1>
 <br>
 {%for post in posts%}
 <a href= {% url 'blog:detail' post.id %}>{{post.title}}</a>
-<a href= {% url 'blog:update' post.id %}>Update</a>
-<a href= {% url 'blog:delete' post.id %}>Delete</a>
-{%endfor%}
+<a class="bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full"href= {% url 'blog:update' post.id %}>Update</a>
+<a class="bg-red-500 hover:bg-red-700 text-white font-bold py-2 px-4 rounded-full" href= {% url 'blog:delete' post.id %}>Delete</a>
 <br>
-<a href = {% url 'blog:create' %}> Create </a>
+<br>
+<br>
+{%endfor%}
+
+<a class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" href = {% url 'blog:create' %}> Create </a>
+  {% endblock content %}
